# dao-generator

./: Cargo.toml  makefile  readme.md
dao-schemas/: auth.yml  base.yml
result/: template_dao.rs  users.rs
result/template_dao/: users.rs
src/: main.rs
src/abs/: iface.rs  imp.rs  mod.rs
src/abstraction/: render.rs
src/components/: field.rs  schema.rs  table.rs
src/util/: helpers.rs
templates/: template_dao.hbr  template_dao.rtpl
