[package]
name = "dao-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "0.9"
clap = { version = "4", features = ["derive"] }
handlebars = "6.3.2"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
