[package]
name = "dao-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6.3.2"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219",features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.33"
hashbrown = { version = "0.15.5", features = ["serde"] }
